--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension WebService-Viglink.
 
-0.01  Sun May  2 21:53:51 2010
-	- original version; created by h2xs 1.23 with options
-		-X WebService-Viglink
+0.02 Mon May 3 12:10:00 PST 2010
+    - fix fatal error in constructor
+    - use referrer instead of ref to avoid quoting reserved word
+
+0.01 Sun May 2 21:53:51 PST 2010
+    - initial version
 
