--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-Revision history for Perl extension WebService-Viglink.
+Revision history for Perl extension WebService-VigLink.
+
+0.05 Mon May 10 18:30:00 PST 2010
+    - namespace change to VigLink (upper case L instead of lower case)
 
 0.04 Tue May 4 16:00:00 PST 2010
     - encode html entities numerically
